<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_piano"
    android:textColor="@color/white"
    android:tint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_piano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/iv_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_navigate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/lable_task"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_navigate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/white"
        app:counterTextColor="@color/white"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="20dp"
        android:hint="@string/label_title"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:counterTextColor="@color/white"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white"
        android:hint="@string/label_desc"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/et_titulo"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_data"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white"
        android:hint="@string/lable_date"
        android:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/et_hora"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/et_descricao"
        app:startIconDrawable="@drawable/ic_date"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_hora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/lable_hour"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/et_data"
        app:layout_constraintTop_toBottomOf="@id/et_descricao"
        app:passwordToggleTint="#F8F8F8"
        app:startIconDrawable="@drawable/ic_timer"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/lable_cancel"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toTopOf="@id/btn_new_task"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_save_task"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        style="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"/>


    
</androidx.constraintlayout.widget.ConstraintLayout>